--- a/.github/workflows/terra-action.yml
+++ b/.github/workflows/terra-action.yml
@@ -28,13 +28,13 @@ jobs:
       run: terraform apply -auto-approve
     - name: Build Docker image
       run: |
-        docker build -t my-image:latest .
+        docker build -t first-python:latest .
       
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
       
     - name: Push image to Docker Hub
       run: |
-        docker tag my-image:latest "${{ secrets.DOCKER_HUB_USERNAME }}/my-image:latest"
-        docker push "${{ secrets.DOCKER_HUB_USERNAME }}/my-image:latest"
+        docker tag first-python:latest "${{ secrets.DOCKER_HUB_USERNAME }}/first-python:latest"
+        docker push "${{ secrets.DOCKER_HUB_USERNAME }}/first-python:latest"
 
