--- a/.github/workflows/terra-action.yml
+++ b/.github/workflows/terra-action.yml
@@ -1,28 +1,39 @@
-name: Terraform EC2
-on:
-  push:
-    branches:
-      - main
+name: Deploy to Amazon ECS
+on: workflow_dispatch
 
+permissions:
+  contents: read
 jobs:
   deploy:
+    name: Setup
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v3
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-west-2
-    - name: Install Terraform
-      uses: hashicorp/terraform-github-actions@v1
-      with:
-        terraform-version: 0.15.5
-    - name: Terraform init
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRETE_KEY }}
+        aws-region: us-east-1
+        
+    - name: intializing terraform
       run: terraform init
-    - name: Terraform apply
+    - name: plan
+      run: terraform plan
+    - name: building terraform
       run: terraform apply -auto-approve
-    - name: SSH
-      run: ssh -i <path-to-private-key> ubuntu@<public-ip-of-ec2-instance>
+    - name: Build Docker image
+      run: |
+        docker build -t first-python:latest .
+      
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+      
+    - name: Push image to Docker Hub
+      run: |
+        docker tag first-python:latest "${{ secrets.DOCKER_HUB_USERNAME }}/first-python:latest"
+        docker push "${{ secrets.DOCKER_HUB_USERNAME }}/first-python:latest"
