--- a/.github/workflows/terra-action.yml
+++ b/.github/workflows/terra-action.yml
@@ -30,8 +30,7 @@ jobs:
       uses: docker/login-action@v1
       with:
         command: remote-exec
-        # working-directory: path/to/terraform/directory
-        args: |
+        run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker pull mani000007/first-python:latest
           docker run -d -p 80:80 mani000007/first-python:latest
